@@ -8,7 +8,7 @@
  * (at your option) any later version.
  * Please read the file COPYING, README and AUTHORS for more information.
  *
- * $Id: defines.h,v 1.53 2005/07/02 14:33:45 alex Exp $
+ * $Id: defines.h,v 1.54 2005/07/05 22:44:47 alex Exp $
  */
 
 
@@ -50,7 +50,8 @@
 #define CLIENT_NICK_LEN 10		/* Max. nick length, see. RFC 2812
 					   section 1.2.1 */
 #define CLIENT_PASS_LEN 21		/* Max. password length */
-#define CLIENT_USER_LEN 9		/* Max. length of user name ("login") */
+#define CLIENT_USER_LEN 10		/* Max. length of user name ("login")
+					   see RFC 2812, section 1.2.1 */
 #define CLIENT_NAME_LEN 32		/* Max. length of "real names" */
 #define CLIENT_HOST_LEN 64		/* Max. host name length */
 #define CLIENT_MODE_LEN 8		/* Max. lenth of all client modes */
