@@ -14,6 +14,7 @@ ngIRCd CVSHEAD
 
 ngIRCd 0.9.x
 
+  - Fixed maximum length of user names, now allow up to 9 characters.
   - Cut off oversized IRC messages that should be sent to the network instead
     of shuttding down the (wrong) connection.
   - Don't generate error messages for unknown commands received before the
@@ -612,4 +613,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.277 2005/07/02 14:46:38 alex Exp $
+$Id: ChangeLog,v 1.278 2005/07/05 22:44:47 alex Exp $
